Java 8 compatibility, etc